--- a/code/soln/yoyo_soln.ipynb
+++ b/code/soln/yoyo_soln.ipynb
@@ -306,6 +306,8 @@
     "\n",
     "where $I^*$ is the augmented moment of inertia, $I + m r^2$.\n",
     "\n",
+    "You can also see [the derivation of these equations in this video](https://www.youtube.com/watch?v=chC7xVDKl4Q).\n",
+    "\n",
     "To simulate the system, we don't really need $T$; we can plug $a$ and $\\alpha$ directly into the slope function."
    ]
   },
@@ -1157,7 +1159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
