--- a/code/soln/chap06soln.ipynb
+++ b/code/soln/chap06soln.ipynb
@@ -394,7 +394,7 @@
    "source": [
     "results = run_simulation2(system)\n",
     "plot_results(census, un, results, 'Proportional model')\n",
-    "savefig('chap03-fig03.pdf')"
+    "savefig('figs/chap03-fig03.pdf')"
    ]
   },
   {
@@ -799,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
