--- a/book/book.tex
+++ b/book/book.tex
@@ -347,7 +347,7 @@ In this book, you learn to program with an immediate goal in mind: writing simul
 
 \index{Pint}
 
-\item for reading, running, and developing code (see \url{https://jupyter.org}).
+\item Jupyter for reading, running, and developing code (see \url{https://jupyter.org}).
 
 \index{Jupyter}
 
