Removing old notebooks

--- a/code/soln/chap02soln.ipynb
+++ b/code/soln/chap02soln.ipynb
@@ -860,7 +860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this function takes no parameters, we would call it like this:"
+    "Since this function takes no parameters, we call it like this:"
    ]
   },
   {
@@ -927,9 +927,9 @@
    "source": [
     "## Parameters\n",
     "\n",
-    "%TODO: expand this transition\n",
+    "As defined in the previous section, `step` is not as useful as it could be, because the probabilities `0.5` and `0.4` are \"hard coded\".\n",
     "\n",
-    "But it would be better to generalize this function so it takes the probabilities `p1` and `p2` as parameters:"
+    "It would be better to generalize this function so it takes the probabilities `p1` and `p2` as parameters:"
    ]
   },
   {
