--- a/code/soln/chap17soln.ipynb
+++ b/code/soln/chap17soln.ipynb
@@ -365,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "<scipy.interpolate.interpolate.interp1d at 0x7f207a58ff98>"
+       "<scipy.interpolate.interpolate.interp1d at 0x7f2878101048>"
       ]
      },
      "execution_count": 6,
@@ -882,8 +882,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 200 ms, sys: 4 ms, total: 204 ms\n",
-      "Wall time: 202 ms\n"
+      "CPU times: user 212 ms, sys: 0 ns, total: 212 ms\n",
+      "Wall time: 211 ms\n"
      ]
     }
    ],
